refactor(CBS-256567:LN-57659:LN-57881): Migrate disbursement strategies to new base-loan APIs
- Refactor disbursement strategies to use AbstractMultiArticleCalculationStrategy
- Implement DebitCreditArticleSpecFactory pattern for article creation
- Add proper contextual relation types (DISBURSEMENT_TRANSACTION_CONTEXT, INTEREST_CALCULATION_CONTEXT)
- Fix null safety issues with @NonNull/@Nullable annotations
- Apply Refaster transformations for code quality improvements
- Migrate entities from aggregate to entity packages
- Replace semantically incorrect relation type usage with proper contextual types
- Add checkstyle configuration for consistent code quality